[project]
name = "qcodes_qick"
version = "0.0.0"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["qcodes_qick"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",   # Missing type annotation for function argument
    "ANN003",   # Missing type annotation for `**kwargs`
    "ANN201",   # Missing return type annotation for public function
    "ANN202",   # Missing return type annotation for private function
    "ANN204",   # Missing return type annotation for special method
    "C901",     # Too complex
    "COM812",   # Trailing comma missing
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "E501",     # Line too long
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "ERA001",   # Found commented-out code
    "FBT001",   # Boolean-typed positional argument in function definition
    "FBT002",   # Boolean default positional argument in function definition
    "ISC001",   # Implicitly concatenated string literals on one line
    "PD011",    # Use `.to_numpy()` instead of `.values`
    "PERF401",  # Use a list comprehension to create a transformed list
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison, consider replacing with a constant variable
    "S101",     # Use of `assert` detected
    "SIM108",   # Use ternary operator instead of `if`-`else`-block
]

[tool.ruff.lint.per-file-ignores]
"example_scripts/*" = ["F401", "F403", "F405", "INP001"]
"example_scripts_v2/*" = ["F401", "F403", "F405", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
